# ais-opcuaserver

./: .gitignore  Dockerfile  config.yaml  docker-entrypoint.sh  main.py  pyproject.amd64.toml  pyproject.armv7.toml  pyproject.toml
plugins/: interface.py
plugins/aissens_sqldb/: AissensSqlDb.py  config.yaml  config_sqlite.yaml  map_validator.py
plugins/aissens_sqldb/config/: config.yaml
plugins/aissens_sqlite/: config.yaml  main.py
server/: NamespaceConfig.py  NodeConfig.py  OPCUAGatewayServer.py  PluginManager.py
src/opcua_server/: __init__.py
src/opcua_server/plugins/: interface.py
src/opcua_server/plugins/aissens_sqldb/: AissensSqlDb.py
src/opcua_server/plugins/aissens_sqldb/config/: config.yaml
src/opcua_server/server/: NamespaceConfig.py  OPCUAGatewayServer.py  PluginManager.py
src/plugins/: interface.py
src/plugins/aissens_sqldb/: AissensSqlDb.py  map_validator.py
src/plugins/aissens_sqldb/config/: config.yaml
src/server/: NamespaceConfig.py  OPCUAGatewayServer.py  PluginManager.py
